--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-#PopSI
+PopSI
+===
 
 This repository provides MATLAB code and datasets for the paper:  
 **"Towards Popularity-Aware Recommendation: A Multi-Behavior Enhanced Framework with Orthogonality Constraint"**.
